# huffman-algorithm

./: .gitignore  CMakeLists.txt  Makefile  README.md  app.py  compile.sh  huffcodeco.cpp  huffcodeco.py  huffman.cpp  huffman.py  huffmancompress.cpp  huffmandecompress.cpp  priority_queue.cpp  texto.txt  texto2.txt
static/css/: 404.css  style-compress.css  style-downloadcompress.css  style.css
static/js/: dragdrophuff.js  dragdroptxt.js  habdeshabboton.js  habdeshabbotonhuff.js  habdeshabbotontxt.js
templates/: 404.html  compress.html  decompress.html  filecompressed.html  filedecompressed.html  index.html
